<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lamp Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensor_device">SensorDeviceActivity</string>
    <string name="get">Get</string>
    <string name="get_all">Get All</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_light_bulb">LightBulbActivity</string>
    <string name="set">Set</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_my_devices">MyDevicesActivity</string>
    <string name="get_devices">Get Devices</string>
    <string name="control_device">Control Devices</string>
    <string name="id">ID</string>
    <string name="device_name">Device Name</string>
    <string name="address">Address</string>

</resources>
