<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.etsn05group2.lampcontroller.activity.MyDevicesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_devices"
            android:id="@+id/button"
            android:onClick="getDevices"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/id"
                android:id="@+id/textView"
                android:layout_weight="0.05" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_name"
                android:id="@+id/textView2"
                android:layout_weight="0.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/textView3"
                android:layout_weight="0.1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listView"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"
            android:listSelector="#BBBBBB"
            android:layout_weight="0.9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_device"
            android:id="@+id/button2"
            android:onClick="controlDevice"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
